--- a/Tests/Fixture/xliff/encoding_xliff_v2_utf8.xlf
+++ b/Tests/Fixture/xliff/encoding_xliff_v2_utf8.xlf
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en-US" trgLang="de-CH">
     <file id="translation_en_us_to_de_ch">
-        <unit id="key1">
+        <unit id="key1" name="foo">
             <segment>
                 <source>foo</source>
                 <target>bär</target>
             </segment>
         </unit>
-        <unit id="key2">
+        <unit id="key2" name="bar">
             <segment>
                 <source>bar</source>
                 <target order="1">föö</target>
             </segment>
         </unit>
-        <unit id="key.with.cdata">
+        <unit id="key.with.cdata" name="cdata">
             <segment>
                 <source>cdata</source>
                 <target><![CDATA[<source> & <target>]]></target>
