--- a/Tests/Fixture/xliff/xliffv2-notes-meta.xlf
+++ b/Tests/Fixture/xliff/xliffv2-notes-meta.xlf
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en-US" trgLang="de-CH">
     <file id="translation_en_us_to_de_ch">
-        <unit id="key1">
+        <unit id="key1" name="foo">
             <notes>
                 <note category="state">new</note>
                 <note category="approved">true</note>
